# codenames-benchmark

./: .gitignore  CLAUDE.md  Makefile  backfill_costs.py  pyproject.toml
docs/plans/: 2026-03-09-insights-page.md
experiments/: example.yaml
prompts/: operative_system.txt  spymaster_system.txt
scripts/: backfill_data.py
src/codenames/: cli.py
src/codenames/agents/: __init__.py  base.py  llm_agent.py  prompts.py  random_agent.py
src/codenames/benchmark/: __init__.py  config.py  rating.py  runner.py  scheduler.py  tournament.py
src/codenames/engine/: __init__.py  board.py  clue.py  game.py  types.py
src/codenames/llm/: __init__.py  client.py  schemas.py
src/codenames/storage/: database.py  repository.py  schema.sql
tests/: conftest.py  test_agents.py  test_config.py  test_engine.py  test_rating.py  test_storage.py
ui/: package-lock.json  package.json
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/app/comparison/: client.tsx  page.tsx
ui/src/app/head-to-head/: client.tsx  page.tsx
ui/src/app/how-it-works/: client.tsx  page.tsx
ui/src/app/insights/: client.tsx  page.tsx
ui/src/app/leaderboard/: client.tsx  page.tsx
ui/src/components/: pair-result-badge.tsx
ui/src/components/dashboard/: charts.tsx  leaderboard-snapshot.tsx  recent-games-table.tsx  stats-cards.tsx
ui/src/components/explainer/: bootstrap-viz.tsx  confidence-explorer.tsx  dot-nav.tsx  game-walkthrough.tsx  hero-board.tsx  llm-pipeline.tsx  (+3 more)
ui/src/lib/: constants.ts  data.ts  db.ts  feature-flags.ts  format.ts  pairs.ts  types.ts
wordlists/: standard.txt
(+8 files in other folders)
